--- a/assets/html/pdf.html
+++ b/assets/html/pdf.html
@@ -23,7 +23,7 @@
             height: 100vh !important;
             border: none !important;
             overflow: hidden;
-            margin: 0px auto 0px auto;
+            margin: 0px auto 0px auto !important;
         }
 
         #error_image {
